--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "description": "Первая командная работа",
   "main": "index.js",
-
   "author": "Kate Konstantionva Vladimir Ozerskiy",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.19.0",
+    "browser-sync": "^2.21.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-build": "^0.5.3",
+    "gulp-cache": "^1.0.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^4.0.0",
@@ -22,38 +23,35 @@
     "gulp-pug": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-stylus": "^2.6.0",
+    "gulp-stylus": "^2.7.0",
     "gulp-webp": "^2.3.0",
     "imagemin-optipng": "^5.2.1",
     "install": "^0.10.2",
     "npm": "^5.6.0",
-    "posthtml-include": "^1.1.0",
-    "gulp-cache": "^1.0.1",
-    "del": "^3.0.0"
+    "posthtml-include": "^1.1.0"
   },
-"scripts": {
-  "stylelint": "stylelint 'sass/**/*.scss' --syntax sass",
-  "test": "npm run editorconfig && npm run stylelint",
-  "build": "gulp build",
-  "start": "npm run build && gulp serve",
-  "images": "gulp images",
-  "copy": "gulp copy",
-  "clean": "gulp clean"
-},
-"browserslist": [
-  "last 2 versions",
-  "IE 11",
-  "Firefox ESR"
-],
-"editorconfig-cli": [
-  "*.html",
-  "*.json",
-  "*.js",
-  "js/**/*.js",
-  "img/**/*.svg",
-  "sass/**/*.scss"
-],
-
+  "scripts": {
+    "stylelint": "stylelint 'sass/**/*.scss' --syntax sass",
+    "test": "npm run editorconfig && npm run stylelint",
+    "build": "gulp build",
+    "start": "npm run build && gulp serve",
+    "images": "gulp images",
+    "copy": "gulp copy",
+    "clean": "gulp clean"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "IE 11",
+    "Firefox ESR"
+  ],
+  "editorconfig-cli": [
+    "*.html",
+    "*.json",
+    "*.js",
+    "js/**/*.js",
+    "img/**/*.svg",
+    "sass/**/*.scss"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://Sheloveseveryone@bitbucket.org/teamWoKi/project-mishka.git"
@@ -62,7 +60,5 @@
     "mishka"
   ],
   "homepage": "https://bitbucket.org/teamWoKi/project-mishka#readme",
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
