--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
     "gulp-stylus": "^2.7.0",
     "gulp-uglify": "^3.0.0",
     "gulp-webp": "^2.3.0",
+    "gulp.spritesmith": "^6.9.0",
     "imagemin-optipng": "^5.2.1",
     "install": "^0.10.2",
     "npm": "^5.6.0",
-    "posthtml-include": "^1.1.0",
- "gulp.spritesmith": "^6.8.0"
-
+    "posthtml-include": "^1.1.0"
   },
   "scripts": {
     "stylelint": "stylelint 'sass/**/*.scss' --syntax sass",
@@ -64,7 +63,5 @@
     "mishka"
   ],
   "homepage": "https://bitbucket.org/teamWoKi/project-mishka#readme",
-  "dependencies": {
-    "gulp.spritesmith": "^6.8.0"
-  }
+  "dependencies": {}
 }
