--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Первая командная работа",
   "main": "index.js",
-  "author": "Kate Konstantionva Vladimir Ozerskiy",
+  "author": "Kate Konstantionva Aleksey Malyshev",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.23.5",
@@ -31,14 +31,15 @@
     "imagemin-optipng": "^5.2.1",
     "install": "^0.10.2",
     "npm": "^5.6.0",
-    "posthtml-include": "^1.1.0"
+    "posthtml-include": "^1.1.0",
+    "imagemin-pngquant": "^5.0.1"
   },
   "scripts": {
     "stylelint": "stylelint 'sass/**/*.scss' --syntax sass",
     "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
     "start": "npm run build && gulp serve",
-    "images": "gulp images",
+    "images": "gulp img",
     "copy": "gulp copy",
     "clean": "gulp clean"
   },
@@ -63,5 +64,7 @@
     "mishka"
   ],
   "homepage": "https://bitbucket.org/teamWoKi/project-mishka#readme",
-  "dependencies": {}
+  "dependencies": {
+
+  }
 }
