--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "imagemin-optipng": "^5.2.1",
     "install": "^0.10.4",
     "npm": "^5.6.0",
+    "picturefill": "^3.0.2",
     "posthtml-include": "^1.1.0"
   },
   "scripts": {
