--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-stylus": "^2.7.0",
     "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.0",
     "gulp-webp": "^2.3.0",
     "gulp.spritesmith": "^6.9.0",
     "imagemin-optipng": "^5.2.1",
